--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ project_name = "MudmotorWiz"
 bundle = "in.rocklab.mudmotorwiz"
 version = "0.0.1"
 url = "https://www.rocklab.in/mudmotorwiz"
-license = "Other"
+license = "LICENSE"
 author = "Arkadeep Ghosh"
 author_email = "arkadeep_ghosh@rocklab.in"
 
@@ -16,12 +16,19 @@ long_description = """More details about the app should go here.
 icon = "src/mudmotorwiz/resources/mudmotorwiz"
 sources = [
     "src/mudmotorwiz",
+    "src/mudmotorwiz/app.py",
+    "src/mudmotorwiz/extract_curves_fitted.py",
 ]
 test_sources = [
     "tests",
 ]
 
 requires = [
+    "numpy",
+    "scipy",
+    "matplotlib",
+    "opencv_python",
+    "scikit_image"
 ]
 test_requires = [    "pytest",]
 
