--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 [tool.briefcase]
 project_name = "MotorDB"
 bundle = "in.rocklab.mudmotorwiz"
-version = "0.0.1"
+version = "0.1.3"
 url = "https://www.rocklab.in/mudmotorwiz"
 license = "LICENSE"
 author = "Arkadeep Ghosh"
@@ -28,7 +28,8 @@ requires = [
     "scipy",
     "matplotlib",
     "opencv_python",
-    "scikit_image"
+    "scikit_image",
+    "pint"
 ]
 test_requires = [    "pytest",]
 
