--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,21 @@
 # This project was generated with 0.3.17 using template: https://github.com/beeware/briefcase-template@v0.3.17
 [tool.briefcase]
 project_name = "MotorDB"
-bundle = "in.rocklab.mudmotorwiz"
+bundle = "in.rocklab.motordb"
 version = "0.1.3"
-url = "https://www.rocklab.in/mudmotorwiz"
-license = "LICENSE"
+url = "https://www.rocklab.in/motordb"
+license.file = "LICENSE"
 author = "Arkadeep Ghosh"
 author_email = "arkadeep_ghosh@rocklab.in"
 
-[tool.briefcase.app.mudmotorwiz]
-formal_name = "MudmotorWiz"
+[tool.briefcase.app.motordb]
+formal_name = "motordb"
 description = "A simple python application and GUI to extract mudmotor performance charecteristics from motor provider's charts, to estimate downhole motor rpm and pressure drop given surface torque and flow rates, and save these to a json for later use (for example during real-time ops)"
 long_description = """More details about the app should go here.
 """
-icon = "src/mudmotorwiz/resources/mudmotorwiz"
+icon = "src/motordb/resources/motordb"
 sources = [
-    "src/mmotordb",
+    "src/motordb",
     "src/motordb/app.py",
     "src/motordb/extract_curves_fitted.py",
 ]
@@ -35,7 +35,7 @@ requires = [
 test_requires = [    "pytest",]
 
 
-[tool.briefcase.app.mudmotorwiz.macOS]
+[tool.briefcase.app.motordb.macOS]
 universal_build = true
 requires = [
     "toga-cocoa~=0.4.0",
@@ -43,13 +43,13 @@ requires = [
 ]
 
 
-[tool.briefcase.app.mudmotorwiz.linux]
+[tool.briefcase.app.motordb.linux]
 requires = [
     "toga-gtk~=0.4.0",
 ]
 
 
-[tool.briefcase.app.mudmotorwiz.linux.system.debian]
+[tool.briefcase.app.motordb.linux.system.debian]
 system_requires = [
     # Needed to compile pycairo wheel
     "libcairo2-dev",
@@ -68,7 +68,7 @@ system_runtime_requires = [
 ]
 
 
-[tool.briefcase.app.mudmotorwiz.linux.system.rhel]
+[tool.briefcase.app.motordb.linux.system.rhel]
 system_requires = [
     # Needed to compile pycairo wheel
     "cairo-gobject-devel",
@@ -88,7 +88,7 @@ system_runtime_requires = [
 ]
 
 
-[tool.briefcase.app.mudmotorwiz.linux.system.suse]
+[tool.briefcase.app.motordb.linux.system.suse]
 system_requires = [
     # Needed to compile pycairo wheel
     "cairo-devel",
@@ -109,7 +109,7 @@ system_runtime_requires = [
 ]
 
 
-[tool.briefcase.app.mudmotorwiz.linux.system.arch]
+[tool.briefcase.app.motordb.linux.system.arch]
 system_requires = [
     # Needed to compile pycairo wheel
     "cairo",
@@ -137,7 +137,7 @@ system_runtime_requires = [
 ]
 
 
-[tool.briefcase.app.mudmotorwiz.linux.appimage]
+[tool.briefcase.app.motordb.linux.appimage]
 manylinux = "manylinux_2_28"
 
 system_requires = [
@@ -159,27 +159,27 @@ linuxdeploy_plugins = [
 ]
 
 
-[tool.briefcase.app.mudmotorwiz.linux.flatpak]
+[tool.briefcase.app.motordb.linux.flatpak]
 flatpak_runtime = "org.gnome.Platform"
 flatpak_runtime_version = "45"
 flatpak_sdk = "org.gnome.Sdk"
 
 
-[tool.briefcase.app.mudmotorwiz.windows]
+[tool.briefcase.app.motordb.windows]
 requires = [
     "toga-winforms~=0.4.0",
 ]
 
 
 # Mobile deployments
-[tool.briefcase.app.mudmotorwiz.iOS]
+[tool.briefcase.app.motordb.iOS]
 requires = [
     "toga-iOS~=0.4.0",
     "std-nslog~=1.0.0",
 ]
 
 
-[tool.briefcase.app.mudmotorwiz.android]
+[tool.briefcase.app.motordb.android]
 requires = [
     "toga-android~=0.4.0",
 ]
@@ -195,10 +195,8 @@ build_gradle_dependencies = [
 
 
 # Web deployments
-[tool.briefcase.app.mudmotorwiz.web]
+[tool.briefcase.app.motordb.web]
 requires = [
     "toga-web~=0.4.0",
 ]
 style_framework = "Shoelace v2.3"
-
-
